add content to menu.html and contct.html. add required styling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,14 @@ body {
   font-style: oblique;
 }
 
-.people {
+.flashy {
+  color: red;
   font-style: italic;
+}
+
+.menu {
+  color: black;
+  font-family: serif;
 }
 
 .title {
